[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/Layout/OptionsLayout.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Options/Keybinding/InputList.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Options/Keybinding/InputRemapper.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Options/SavingButton/KeyboardSavingButton.gd" type="Script" id=4]
[ext_resource path="res://src/UI/Options/Keybinding/KeybindResetDefault.gd" type="Script" id=5]

[node name="KeyboardOptionMenu" instance=ExtResource( 1 )]

[node name="Title" parent="Wrapper/Page" index="0"]
margin_bottom = 14.0
text = "ui_options_keyboard"

[node name="Contents" parent="Wrapper/Page" index="1"]
margin_top = 18.0
custom_constants/separation = 8

[node name="InputList" type="ScrollContainer" parent="Wrapper/Page/Contents" index="0"]
margin_right = 1240.0
margin_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputLineContainer" type="VBoxContainer" parent="Wrapper/Page/Contents/InputList" index="0"]
margin_right = 1240.0
margin_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="MenuBackInput" parent="Wrapper/Page/OptionsFooter" index="0"]
margin_left = 1064.0
margin_right = 1143.0

[node name="DefaultButton" type="Button" parent="Wrapper/Page/OptionsFooter" index="1"]
margin_left = 1147.0
margin_right = 1195.0
margin_bottom = 20.0
text = "Reset"
script = ExtResource( 5 )

[node name="MenuSaveButton" parent="Wrapper/Page/OptionsFooter" index="2"]
script = ExtResource( 4 )
section = "keybinding"

[node name="InputRemapper" parent="." index="1" instance=ExtResource( 3 )]
visible = false
